--- a/blog/_posts/2025-01-11-neomania.md
+++ b/blog/_posts/2025-01-11-neomania.md
@@ -22,9 +22,9 @@ In this post I'd like to share my <a href="{{blog}}/2024/12/02/centralizing-thou
 
 <!--more-->
 
-The reason for it being a trap (or more generally a negative thing) is that new things have a high chance of being irrelevant, so if it's risky to invest time and energy into them. Another point of view is what we mentioned in [On Lifetime]({{blog}}/2023/07/10/on-lifetime.html), from the book *Algorithms to Live By* [1]: an estimate for the lifespan of something we have no information about is twice its current age.
+The reason for it being a trap (or more generally a negative thing) is that new things have a high chance of being irrelevant. We touched on this in [On Lifetime]({{blog}}/2023/07/10/on-lifetime.html), where we mention the book *Algorithms to Live By* [1], which says: an estimate for the lifespan of something we have no information about is twice its current age.
 
-Examples of neomania I can think of:
+Thus, it's risky to invest time and energy on new things. Examples of neomania I can think of:
 
 * Reading or watching the news
 * Paying more for premieres
