--- a/blog/_posts/2025-01-11-neomania.md
+++ b/blog/_posts/2025-01-11-neomania.md
@@ -33,7 +33,7 @@ Thus, it's risky to invest time and energy on new things. Examples of neomania I
 
 ### Neotrality
 
-I believe I'm less affected by neomania than average. It's not that I make an effort to avoid new things nor that I think it's overall positive to do so, it's just my default mode. I decided to call it **neotrality**, a word play between the *neo* prefix (meaning new) and neutrality, as in being neutral to novelty.
+I believe I'm less affected by neomania than average. It's not that I make an effort to avoid new things nor that I think it's always best to do so, it's just my default mode. I decided to call it **neotrality**, a word play between the *neo* prefix (meaning new) and neutrality, as in being neutral to novelty.
 
 If I had a more negative view towards it, I could used the term *neophobia*.
 
