--- a/blog/_posts/2025-01-11-neomania.md
+++ b/blog/_posts/2025-01-11-neomania.md
@@ -14,7 +14,7 @@ excerpt_separator: <!--more-->
   <img src="{{resources_path}}/neutralia.png" alt="Neutralia by Edvard Munch, the Norwegian painter of 'The Scream' fame." />
 </figure>
 
-In his book, <a href="https://www.kuniga.me/books/the-art-of-thinking-clearly.html">The Art of Thinking Clearly</a>, Rolf Dobelli describes 99 psychological traps that humans tend to fall into. One of them is what he calls <i>Neomania</i>, the mania for the new.
+In his book, <a href="{{books}}/the-art-of-thinking-clearly.html">The Art of Thinking Clearly</a>, Rolf Dobelli describes 99 psychological traps that humans tend to fall into. One of them is what he calls <i>Neomania</i>, the mania for the new.
 <br /><br />
 In this post I'd like to share my <a href="{{blog}}/2024/12/02/centralizing-thoughts.html">thoughts</a> on it.
 
@@ -77,9 +77,17 @@ and relying on unproven technology often leads to throw-away exploratory project
 
 In here too there are downsides, especially at work: I often have trouble staying on top of what other people are working on, which limits my ability to find new opportunities and project ideas.
 
+On the other hand, I found that if something is really important or worth it, it eventually reaches me.
+
 ## Conclusion
 
-Overall I still find neotrality a net positive. It's easy to regret things in hindsight (*I wish I had bought the iPad sooner*) but it helps remembering there's a [survivorship bias](https://www.kuniga.me/books/the-art-of-thinking-clearly.html) at play: for every iPad I didn't buy, I also didn't buy other devices that would not have been useful. For each tech like LLMs there's web3 and blockchain.
+Overall I still find neotrality a net positive. It's easy to regret things in hindsight (*I wish I had bought the iPad sooner*) but it helps remembering there's a [survivorship bias]({{books}}/the-art-of-thinking-clearly.html) at play: for every iPad I didn't buy, I also didn't buy other devices that would not have been useful. For each tech like LLMs there's web3 and blockchain.
+
+## Related Posts
+
+[The Innovator's Dilemma]({{books}}/the-innovators-dilemma) reminds me of the tradeoffs between neomania and neotrality. It's easy to blame companies that failed to innovate because they didn't invest enough in X that startup a ABC did.
+
+On the other hand there are many startups that invested in Y instead and disappeared from the map and conversely many other promising technologies that company did invest in and didn't pan out. Survivorship bias again.
 
 ## References
 
