new post: max-princ

--- a/blog/_posts/2024-12-24-open-map.md
+++ b/blog/_posts/2024-12-24-open-map.md
@@ -352,7 +352,7 @@ QED
 ## References
 
 * [1] Complex Analysis - Lars V. Ahlfors
-* [[2]({{blog}}/2024/07/02/holomorphic-functions-are-analytic.html) NP-Incompleteness: Holomorphic Functions are Analytic
+* [[2]({{blog}}/2024/07/02/holomorphic-functions-are-analytic.html)] NP-Incompleteness: Holomorphic Functions are Analytic
 * [[3]({{blog}}/2024/06/06/cauchy-integral-formula.html)] Cauchy's Integral Formula
 * [[4]({{blog}}/2024/04/26/cachy-integral-theorem.html)] NP-Incompleteness: Cauchy Integral Theorem
 * [[5]({{blog}}/2024/05/09/the-winding-number.html)] NP-Incompleteness: The Winding Number
