--- a/blog/_posts/2025-01-01-2024-in-review.md
+++ b/blog/_posts/2025-01-01-2024-in-review.md
@@ -49,7 +49,7 @@ Here's a list of all the posts I wrote as notes from the book this year:
 
 I felt like I didn't reserve enough time to study things relevant to my work as compared to previous years, especially books and papers.
 
-Writing [Understanding std::call_once() in C++]({{blog}}/2024/03/01/understanding-call-once-in-cpp.html) was interesting and I learned many interesting things. It was also rewarding to learn about [Negative Bloom Filters]({{blog}}/2024/06/22/negative-bloom-filter.html) as there was a possibility to use at work to optimize some workload, but we ended up not using it.
+Writing [Understanding std::call_once() in C++]({{blog}}/2024/03/01/understanding-call-once-in-cpp.html) was interesting and I learned many new things. It was also rewarding to learn about [Negative Bloom Filters]({{blog}}/2024/06/22/negative-bloom-filter.html) as there was a possibility to use at work to optimize some workload, but we ended up not using it.
 
 On the other hand, studying low-level coroutines in C++ ([Coroutines in C++ - The API]({{blog}}/2024/06/03/coroutines-in-cpp.html)) felt like a waste of time. The low-level machinery of coroutines is convoluted and very different from how it is used in practice by high-level libraries such as [folly coroutines](https://github.com/facebook/folly/tree/main/folly/experimental/coro), and I still don't have a good grasp on the latter.
 
