add extended reviews

--- a/blog/_posts/2025-01-01-2024-in-review.md
+++ b/blog/_posts/2025-01-01-2024-in-review.md
@@ -509,7 +509,7 @@ This year I started a new [page](https://www.kuniga.me/books/) where I plan to c
       Rating: 4/5.
       </td>
 
-      <td><img src="{{site.url}}/resources/books/innovators_dilemma.jpg" alt="{{book_cover_alt}}" /></td>
+      <td><img src="{{site.url}}/resources/books/innovators_dilemma.jpg" alt="{{book_cover_alt}}" /></td> (<a href="https://www.kuniga.me/books/the-innovators-dilemma">Extended review</a>).
     </tr>
 
   </tbody>
