--- a/blog/_posts/2025-03-29-queues.md
+++ b/blog/_posts/2025-03-29-queues.md
@@ -14,7 +14,7 @@ vanity: "2025-03-29-queues"
 
 We recently visited Vietnam and on the way back, departing from Hanoi, we had to stand in multiple queues: one for ticketing and luggage, one for immigration, one for X-ray screening, and finally one for boarding. We could even count the last queue inside the plane to reach our seats.
 
-This got me thinking about **queues in data processing** and reasons to use (or avoid) use them. In this post I'd like to explore some of those trade-offs.
+This got me thinking about **queues in data processing** and reasons to use (or avoid) them. In this post I'd like to explore some of those trade-offs.
 
 <!--more-->
 
