--- a/blog/_posts/2025-04-12-elf.md
+++ b/blog/_posts/2025-04-12-elf.md
@@ -27,7 +27,7 @@ ELF is a file storing the object code produced by the compiler and it contains m
 
 Different families of operating systems use different formats. ELF is used for Linux while MacOS uses the [Mach-O](https://en.wikipedia.org/wiki/Mach-O) format and Windows uses the [Portable Executable](https://en.wikipedia.org/wiki/Portable_Executable) (PE).
 
-Both ELF and PE are based on an older format called *Common Object File Format* COFF. COFF on its turn replaced a format called [a.out](https://en.wikipedia.org/wiki/A.out). We can see references to it when we compile code without specifying an output name.
+Both ELF and PE are based on an older format called *Common Object File Format* COFF. COFF on its turn replaced a format called [a.out](https://en.wikipedia.org/wiki/A.out). We can see references to it when we compile code without specifying an output name (the default filename is `a.out`).
 
 We'll be using this simple C++ program to follow along with an example:
 
@@ -61,9 +61,9 @@ The ELF layout consists of basically four parts: *ELF header*, *Program Header*,
 
 The ELF header contains metadata about the ELF file itself and the intended architecture it's meant to be run in. The *Program Header* is a table of contents containing information on what to load from the file into memory. Each row in this table is called a **segment**.
 
-The *Section Header* is a table of contents for the different memory segments called **sections**. This is mainly used by the linker and debugger, but not used during runtime. A segment typically includes one or more sections.
+The *Section Header* is a table of contents for the more granular chunks of memory called **sections** (a segment typically includes one or more sections). This is mainly used by the linker and debugger, but not used during runtime, so it's not loaded into memory.
 
-All the other parts are table of contents: they contain indexes to the actual contents located under the *Section Data*. Note that not all section are loaded into memory (e.g. debug information are left out).
+All the headers discussed so far are table of contents: they contain indexes. The actual data is located under the *Section Data*. Note that not all section are loaded into memory (e.g. debug information are left out).
 
 The *Other* contains information that are not part of any headers but are also not section data either. One example is the dynamic linker path. It's indexed by the program header (via `INTERP` as we'll see later) but not loaded into memory.
 
@@ -71,7 +71,7 @@ Why does the section header appears *after* the section data? That's because the
 
 ### ELF Header
 
-This **ELF header** describes some metadata of the ELF file itself, such as whether its meant for 64-bit architectures (e.g. `Class = ELF64`), little-endian vs big-endian (e.g. `Data = 2's complement, little endian`), instruction set (e.g. `Machine = x86-64`) whether it's an executable or a shared library (e.g `Type = EXEC`). This header also tells the kernel where to find the other two headers: program and section headers.
+This **ELF header** describes some metadata of the ELF file itself, such as whether it's meant for 64-bit architectures (e.g. `Class = ELF64`), little-endian vs big-endian (e.g. `Data = 2's complement, little endian`), instruction set (e.g. `Machine = x86-64`) whether it's an executable or a shared library (e.g `Type = EXEC`). This header also tells the kernel where to find the other two headers: program and section headers.
 
 To inspect the ELF header we can do:
 
@@ -179,11 +179,11 @@ Once the dynamic linker is done, it passes the control back to the `main()` func
 
 ## Conclusion
 
-To motivation of this post is that I wanted to know more about the ELF format. I had some very vague understanding after reading [1] a while back but lacked a good mental model.
+To motivation of this post is that I wanted to know more about the ELF format. I had some very vague understanding of it after reading [1] a while back but lacked a good mental model.
 
 I used mostly ChatGPT to write this post and I felt like a journalist interviewing an expert, asking questions and follow-ups where I needed more detail. It was a fun process and I find the word *journalist* appropriate with respect to considering my blog a diary or *journal*.
 
-I learned about the overall structure of ELF files but also was able to understand a lot more clearly how a program is executed! I had learned in college about how a CPU might execute a program (program counter, etc.) once it is initialized but don't recall learning on what the initialization process was.
+I learned about the overall structure of ELF files but I was also able to understand a lot more clearly how a program is executed! I had learned in college how a CPU might execute a program once it is initialized but I don't recall learning about the initialization process itself.
 
 Things I learned that I find particularly interesting:
 
@@ -191,8 +191,7 @@ Things I learned that I find particularly interesting:
 * Not all contents of the ELF is loaded in memory.
 * The segments specify explicitly their address in the virtual memory space.
 * Uninitialized variables are placed in different sections and handled differently from initialized ones.
-
-It's an interesting design that the kernel handles the initial loading of a ELF file but for dynamic linking is delegates to a "third-party" program in user space.
+* The kernel does the initial loading of th ELF file but delegates the dynamic linking to a "third-party" program in user space.
 
 ## References
 
