new post: residues$

--- a/blog/_posts/2024-11-02-poles.md
+++ b/blog/_posts/2024-11-02-poles.md
@@ -271,11 +271,11 @@ Note that if $f(z)$ has $a$ as its zero of order $m$, it can be written as
 
 $$f(z) = (z - a)^m f_m(z)$$
 
-Where $f_h(z)$ has a valid Taylor series representation and is thus holomorphic.
+Where $f_m(z)$ has a valid Taylor series representation and is thus holomorphic.
 
 ### Poles
 
-**Lemma 4.** Let $f$ have Laurent Series as in $(7)$. Then, if $c_n = 0$ for all $n < -m$ and $c_{-m} \ne 0$ for some finite $m > 0$, $f$ has a **pole of order** $m$.
+**Lemma 4.** Let $f$ have Laurent Series as in $(7)$. Then, if $c_n = 0$ for all $n < -m$ and $c_{-m} \ne 0$ for some finite $m > 0$, $a$ is a **pole of order** $m$ of $f$.
 
 <proof>
 
