--- a/blog/_posts/2025-04-12-elf.md
+++ b/blog/_posts/2025-04-12-elf.md
@@ -61,7 +61,7 @@ The ELF layout consists of basically four parts: *ELF header*, *Program Header*,
 
 The ELF header contains metadata about the ELF file itself and the intended architecture it's meant to be run in. The *Program Header* is a table of contents containing information on what to load from the file into memory. Each row in this table is called a **segment**.
 
-The *Section Header* is a table of contents for the more granular chunks of memory called **sections** (a segment typically includes one or more sections). This is mainly used by the linker and debugger, but not used during runtime, so it's not loaded into memory.
+The *Section Header* is a table of contents for the more granular chunks of memory called **sections** (a segment typically includes one or more sections). This header is mainly used by the linker and debugger, but not used during runtime, so it's not loaded into memory.
 
 All the headers discussed so far are table of contents: they contain indexes. The actual data is located under the *Section Data*. Note that not all section are loaded into memory (e.g. debug information are left out).
 
@@ -71,7 +71,7 @@ Why does the section header appears *after* the section data? That's because the
 
 ### ELF Header
 
-This **ELF header** describes some metadata of the ELF file itself, such as whether it's meant for 64-bit architectures (e.g. `Class = ELF64`), little-endian vs big-endian (e.g. `Data = 2's complement, little endian`), instruction set (e.g. `Machine = x86-64`) whether it's an executable or a shared library (e.g `Type = EXEC`). This header also tells the kernel where to find the other two headers: program and section headers.
+The **ELF header** describes some metadata of the ELF file itself, such as whether it's meant for 64-bit architectures (e.g. `Class = ELF64`), little-endian vs big-endian (e.g. `Data = 2's complement, little endian`), instruction set (e.g. `Machine = x86-64`) whether it's an executable or a shared library (e.g `Type = EXEC`). This header also tells the kernel where to find the other two headers: program and section headers.
 
 To inspect the ELF header we can do:
 
@@ -155,11 +155,11 @@ We now cover the steps that take place when we run an ELF file. We start by exec
 ./example
 {% endhighlight %}
 
-The shell process runs the system call [`execve("example", argv, argp)`](https://man7.org/linux/man-pages/man2/execve.2.html). This instructs the kernel to replace current the shell process with a new one.
+The shell process runs the system call [`execve("example", argv, argp)`](https://man7.org/linux/man-pages/man2/execve.2.html). This instructs the kernel to replace the current shell process with a new one.
 
-The kernel starts by reading the ELF header file to read metadata about the program. It also finds the location of the program header in the file.
+The kernel starts by reading the ELF header file to extract metadata about the program. It also finds the offset of the program header in the file.
 
-The kernel goes over each row of the program header and for each `LOAD` segment it simply maps the file contents into memory (recall that some segments take more space in memory, such those from uninitialized variables).
+The kernel goes over each row of the program header and for each `LOAD` segment it maps the file contents into memory (recall that some segments take more space in memory, such those from uninitialized variables).
 
 If the binary uses shared libraries, then the kernel reads the `INTERP` row to find the path of the dynamic linker, e.g. `/lib64/ld-linux-x86-64.so.2`. This is a shared library that is also represented as an ELF file. The kernel loads it in memory and passes control to it.
 
