--- a/blog/_posts/2024-12-07-local-ipc.md
+++ b/blog/_posts/2024-12-07-local-ipc.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Local Inter-Process Communication"
-tags: [cpp, operating systems]
+tags: [c++, operating systems]
 vanity: "2024-12-07-local-ipc"
 excerpt_separator: <!--more-->
 ---
