--- a/blog/_posts/2025-04-12-elf.md
+++ b/blog/_posts/2025-04-12-elf.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "ELF: Executable and Linkable Format"
-tags: [compilers, cpp]
+tags: [compilers, c++]
 excerpt_separator: <!--more-->
 vanity: "2025-04-12-elf"
 ---
