--- a/blog/_posts/2025-01-01-2024-in-review.md
+++ b/blog/_posts/2025-01-01-2024-in-review.md
@@ -265,7 +265,7 @@ This year I started a new [page](https://www.kuniga.me/books/) where I plan to c
         <br /><br />
         I got this book as a gift.
         <br /><br />
-        Rating: 5/5.
+        Rating: 5/5. (<a href="https://www.kuniga.me/books/the-code-breaker.html">Extended review</a>)
         </td>
 
         <td><img src="{{site.url}}/resources/books/code-breaker.jpg" alt="{{book_cover_alt}}" /></td>
@@ -506,7 +506,7 @@ This year I started a new [page](https://www.kuniga.me/books/) where I plan to c
       <br /><br />
       Even well managed companies suffer from this. It is not about complacent companies that fail to invest on R&D or are afraid to disrupt its own products. There are large forces that prevent anyone manager from avoiding this: existing user base, shareholders, cost centers / organizational structures.
       <br /><br />
-      Rating: 4/5.
+      Rating: 4/5. (<a href="https://www.kuniga.me/books/the-innovators-dilemma.html">Extended review</a>)
       </td>
 
       <td><img src="{{site.url}}/resources/books/innovators_dilemma.jpg" alt="{{book_cover_alt}}" /></td> (<a href="https://www.kuniga.me/books/the-innovators-dilemma">Extended review</a>).
