--- a/blog/_posts/2025-05-16-async-io.md
+++ b/blog/_posts/2025-05-16-async-io.md
@@ -44,7 +44,7 @@ This can be a problem if we want to write a server that supports multiple inboun
 
 One way to work around this is to handle each connection in child process (via `fork()`) or a thread. However this doesn't scale well with a lot of connections, since if the number of connections is much higher than the number of CPU cores, the kernel will have to do a lot of context switching.
 
-## Non-Blocking I/O - User Space
+## Busy Loops
 
 One option around this is to make the socket operations non-blocking and keep polling them in an infinite loop. We can do this by marking the file socket as non-blocking via the `fcntl()` (file control) method:
 
@@ -71,7 +71,7 @@ while (1) {
 
 The problem with this approach is that it could be that most of the time none of the sockets are receiving data, so we're just burning CPU with busy loops.
 
-## Non-Blocking I/O, Kernel Space: select
+## `select()`
 
 A better alternative is to use the `select()` API, in which the thread is put to sleep instead of looping and only awoken when there is an event.
 
@@ -121,7 +121,7 @@ A more detailed flow for the case of network sockets is the following: when a pa
 
 The kernel doesn't wait for more file descriptors to be triggered, which means that most of the time only one `fd` will have `FD_ISSET()` return true. This is pretty innefficient if we have many `fd`s being monitored since each time a `fd` is ready we have to scan $O(N)$ file descriptors to find which one it is.
 
-## Non-Blocking I/O, Kernel Space: epoll
+## `epoll()`
 
 To work around the problems of `select()` and `poll()`, the API `epoll()` was introduced in Linux systems. Other OSes have analogous implementations.
 
