--- a/blog/_posts/2025-05-16-async-io.md
+++ b/blog/_posts/2025-05-16-async-io.md
@@ -15,7 +15,7 @@ vanity: "2025-05-16-async-io"
 
 In this post I wish to do an overview of the different asynchronous I/O solutions, primarily on Linux.
 
-We'll start with blocking I/O, the explore a few different ways to perform non-blocking I/O such as busy loops, `select()`, `epoll()` and finally cover the library `libevent`.
+We'll start with blocking I/O, then explore a few different ways to perform non-blocking I/O such as busy loops, `select()`, `epoll()` and finally cover the library `libevent`.
 
 <!--more-->
 
