edge + level triggers

--- a/blog/_posts/2025-05-16-async-io.md
+++ b/blog/_posts/2025-05-16-async-io.md
@@ -177,6 +177,20 @@ Some comments:
 * `(2)` - this array is a buffer which is filled by `epoll_wait()`. It doesn't mean it fills all the positions though, only the first `n`.
 * `(3)` - the bitmask `events` in `events[i]` contains a subset of the bitmask provided when registering the `fd` in `epoll_ctl()`, corresponding to the event types that were actually triggered.
 
+### Level-triggered vs. Edge-triggered
+
+There are two notification modes supported by epoll. *Level-trigger* is the default mode and it will trigger a notification as long as there's data in the file descriptor.
+
+*Edge-triggered* can be enabled by including the flag `EPOLLET`:
+
+{% highlight cpp %}
+evt.events = EPOLLIN | EPOLLET;
+{% endhighlight %}
+
+In this mode it will only trigger a notification when there's a change of state. If the client doesn't read all the data in the channel and no new events arrive, the next time it `epoll_wait()` the corresponding file descriptor won't be marked as ready.
+
+The terms level and edge come from electronics. An analogy: the honk is a level trigger because it stays on as long as it's being pressed. The button of a stop watch is a edge trigger because it starts once you press the button but nothing changes if you keep the button pressed.
+
 ## libevent
 
 As we mentioned in the previous section, different OSes came up with different solutions to the limitations of `select()` and `poll()`, which makes it hard to write cross-platform code.
