revisit cpu cache post

--- a/blog/_posts/2020-04-24-cpu-cache.md
+++ b/blog/_posts/2020-04-24-cpu-cache.md
@@ -15,7 +15,7 @@ How much faster is it? Doing some estimates based on a benchmark for Intel’s H
 
 ## CPU cache is cache
 
-I wanted to being with this tautology to call out that many of properties and design of a high-level caching system we might be more familiar with also applies to a CPU cache. It was useful for me to keep this in mind for understanding this new topic.
+I wanted to begin with this tautology to call out that many of properties and design of a high-level caching system we might be more familiar with also applies to a CPU cache. It was useful for me to keep this in mind for understanding this new topic.
 
 For example, as we’ll see later in more details, a CPU cache can be seen as a key-value table, which requires hash-like strategies for assigning keys to rows and for cache eviction.
 
@@ -25,7 +25,7 @@ There are multiple CPU caches and they perform different functions. It varies de
 
 ### Hierarchy
 
-The CPU cache is divided into multiple levels of cache. The first level, referred to as L1 is the fastest and smallest. The n-th level, Ln is the largest and slowest. Typical values of n seem 3 or 4. In a multi-core CPU, the first levels of cache are exclusive to each cache, while the later levels are shared.
+The CPU cache is divided into multiple levels of cache. The first level, referred to as L1 is the fastest and smallest. The `n`-th level, Ln is the largest and slowest. Typical values of `n` seem to be 3 or 4. In a multi-core CPU, the first levels of cache are exclusive to each cache, while the later levels are shared.
 
 For a real-world example, Wikipedia [4] describes the architecture for Intel’s Kaby Lake architecture, where L1 is 64KB, L2 is 256KB and L3 is between 2MB to 8MB and shared by the cores.
 
@@ -39,6 +39,7 @@ There’s another specialized cache called translation lookaside buffer, or TLB,
 
 Why do we need separate caches for these 3 different uses? Wikipedia [1] provides an insight:
 > Pipelined CPUs access memory from multiple points in the pipeline: instruction fetch, virtual-to-physical address translation, and data fetch. The natural design is to use different physical caches for each of these points, so that no one physical resource has to be scheduled to service two points in the pipeline.
+
 It’s worth recalling that a CPU operates in cycles and it follows a set of operations in a pipeline fashion (think of a conveyor belt in a factory). The following is a diagram of a possible CPU pipeline:
 
 <figure class="center_children">
@@ -52,23 +53,35 @@ We’ll now analyze the structure of a CPU cache, in particular a data cache. Li
 
 ### Cache entry
 
-The value of our lookup table is called a **cache line** and it has a fixed size. The key is called tag and will correspond to a memory address in a data cache. The combination key-value entry of our table is called **cache entry**. The cache entry also reserves some bits to store flags, which can be seen as metadata.
+We can think of the CPU cache as a table. If has `n` rows and `m` columns (Intel uses `n = 64` and `m = 8`). A cell in this table is called a **cache line** and it has a fixed size `k` bytes (Intel uses `k = 64`). The row of the table is also known as **index**.
 
-A cache entry can have an associated index, which would correspond to the row number in a table. The index information can be utilized to shave off some bits from the tag. To see why, imagine a cache with 64 (2^6) entries and that our assignment policy (think hash function) is that an address A is assigned to index `A mod 64`. So for example, an address (in binary) `10110010110101` would be assigned to index `110101` (`53` decimal). Because the number of entries, 64, is a power of 2, the 6 least significant bits are the buckets. This means our tag for `10110010110101` can be `10110010` since the other bits `110101` is implicit from the index.
+**Storing.** Suppose we want to cache an object currently in the RAM and of size 32 bits, located at the address `A`, so we need to cache the segment `[A, A + 4)` (recalling that addresses points to bytes, that is there's 8-bits between `A` and `A + 1`).
+
+Now, the important thing to observe is that an entire block is moved to the cache line, not just the segment `[A, A + 4)`. Suppose the cache line is 64 bytes. To find to which 64-block `A` belongs, we can set its 6 least significant bits to 0, which we call `A'`. Then the whole block `[A', A' + 6)` will be stored in the cache line.
+
+It's entirely possible that the object crosses the block boundary, that is `A + 4 > A' + 6`, in which case the next block `[A' + 6, A' + 12)` would need to be stored as well, in a different cache line.
+
+To determine the index or row in which to store the cache line we use the next bits of the address. Assuming `n = 64 = 2^6`, we can use the next 6-bits (`b[6..12]`) to determine the index. Once the index is found, we need to determine which of the `m` columns to store the cache line in, which we'll discuss next.
+
+We also need to store the remaining `64 - 6*2 = 52` bits alongside the data to validate the data cache is the correct one upon reading (due to collisions). This is called the **tag**.
+
+**Reading.** To determine whether an address is in the cache, we use the same bits `b[6..12]` to find the correct index. Then we need to compute the tag from the bits `b[12..64]` and look for a column that contains the same tag.
 
 ### Associativity
 
-We gave a glimpse above when talking about the mod function that we can implement our lookup table using a simple hash function, and when talking about hash functions we necessarily need to think of collisions, i.e., two different entries mapping to the same index.
+In the process above, we may have collisions because any addresses that have the same bits `b[6..12]` will be mapped to the same index.
 
 On one side a CPU cache is “bare metal” hardware, so complex hash collision resolution strategies is infeasible to implement. On the other hand it is a cache, not a persistent key-value store, meaning that when a collision happen we can just evict the previous entry.
 
-Still, high eviction rates can also mean high cache misses rates which is a key quality factor of a cache. Given the limited size of a cache, there are two dimensions we can tradeoff: number of indexes and number of cache entries per index. In our analogy, this would roughly map to number of rows vs. number of columns.
+Still, high eviction rates can also mean high cache misses rates which is a key quality factor of a cache. Given the limited size of a cache, there are two dimensions we can tradeoff: number of indexes and number of cache entries per index. In our analogy with hash tables, this would roughly map to number of entries vs. max number of collisions supported.
 
-Some common strategies are either one column (direct mapping) or two columns (two-way set associativity), but in theory we could have any number columns (Intel’s Haswell architecture uses 8) [6]. Any such strategy is what we call associativity. Let’s take a closer look at these strategies.
+Some common strategies are either having `m = 1` (direct mapping), `m = 2` (two-way set associativity) or some higher number like Intel's `m = 8` [6]. Any such strategy is what we call associativity. Let’s take a closer look at these strategies.
+
+A group of cache lines within the same index is called a **set**.
 
 **Direct-mapping**
 
-Like a hash table with a simple function. Each address maps to exactly one index/row. If a new entry maps to a row already "occupied", the previous entry is evicted.
+Like a hash table with a simple function. Each set has exactly one cache line. If a new entry maps to a row already "occupied", the previous entry is evicted.
 
 The advantage of this is simplicity: there’s no criteria we need to use to choose which “cell” of our table to assign it to once we determined its row, since there’s only one. Eviction is easy too.
 
@@ -76,15 +89,15 @@ The downside is that we’re subject of degenerate cases where two hot addresses
 
 **Two-way set associativity**
 
-As we said, we have two columns for each row, so a given memory address can go to any of two cells. When deciding which column to assign it to, it boils down to which of the existing values in that row to evict, and a natural strategy is to use LRU (least recently used).
+In this case, each set has 2 cache lines, so a given memory address can go to any of the two. When deciding which cache line to assign it to, we can use LRU (least recently used).
 
-To do so, we need an extra bit to keep track of this information: every time an item is read, we set a bit in that cell to 1 and to 0 in the other. We can then always evict the slot with bit 0.
+To do so, we need an extra bit to keep track of this information: every time a cache line is read, we set a bit in it to 1 and to 0 in the other. On writes, we can always evict the slot with bit 0.
 
-This is a more complex approach than direct-mapping and we need to use a bit to keep account for the LRU. On the other hand it avoids the degenerate case of a direct-mapping, but suffer the same if there are 3 or more hot addresses.
+This is a more complex approach than direct-mapping and we need to use a bit to keep account for the LRU. On the other hand it avoids the degenerate case of a direct-mapping, but suffers the same if there are 3 or more hot addresses.
 
-**N-way associative cache**
+**m-way associative cache**
 
-A more general structure would be N column per row. This further shifts the balance between complexity (the higher the N the more expensive it is) and avoiding degenerate cases (resilient to up N hot addresses).
+A more general structure would be `m` cache lines per set. This further shifts the balance between complexity (the higher the `m` the more expensive it is) and avoiding degenerate cases (resilient to up N hot addresses).
 
 ## Translation Lookaside Buffer
 
@@ -259,7 +272,9 @@ One of the most difficult things for me is to understand the precise difference 
 
 The discussion of Spectre [11] on Meltdown is a bit clearer:
 > Meltdown is a related attack which exploits out-of-order execution to leak kernel memory. Meltdown is distinct from Spectre attacks in two main ways. First, unlike Spectre, Meltdown **does not use branch prediction**. Instead, it relies on the observation that when an instruction causes a trap, following instructions are executed out-oforder before being terminated. Second, Meltdown exploits a vulnerability specific to many Intel and some ARM processors which allows certain speculatively executed instructions to bypass memory protection. Combining these issues, Meltdown **accesses kernel memory from user space**. This access causes a trap, but before the trap is issued, the instructions that follow the access leak the contents of the accessed memory through a cache covert channel.
+
 The remarks of Meltdown [12] on Spectre in more succinct and obscure:
+
 > Meltdown is distinct from the Spectre Attacks in several ways, notably that Spectre requires tailoring to the victim process’s software environment, but applies more broadly to CPUs.
 My feeling is that the differences are too specific and technical to be explained in a simple way, yet I seem to lack the background to understand them fully.
 
